--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/css/main.css">
+    <link type="text/css" rel="stylesheet" href="css/site.css"/>
     <title>Neo4j Movies</title>
 </head>
 
@@ -9,8 +8,8 @@
 <div id="graph">
 </div>
 
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/d3.v3.min.js"></script>
 <script type="text/javascript" src="js/graph.js"></script>
 </body>
 </html>
